--- a/image.yaml
+++ b/image.yaml
@@ -129,6 +129,11 @@ artifacts:
        md5: 3dba80cc1be17b00cb901441111886f3
        url: http://$DOWNLOAD_SERVER/released/JBoss-middleware/eap7/7.3.0/jboss-eap-7.3.0.zip
 
+     - name: jboss-eap-7.3.5-patch
+       target: jboss-eap-7.3.5-patch.zip
+       md5: 921892c5a2234ca2bd09d5fd5ad1aad8
+       url: http://$DOWNLOAD_SERVER/released/JBoss-middleware/eap7/7.3.5/jboss-eap-7.3.5-patch.zip
+
      - name: jboss-eap-7.3.6.GA-CR1-patch
        target: jboss-eap-7.3.6.GA-CR1-patch.zip
        md5: 2626e4536c4d7b2a0138ba1f50ecff58
