[KEYCLOAK-18574] Use correct Koji branch and build target names
Signed-off-by: Jan Lieskovsky <jlieskov@redhat.com>

--- a/overrides/openjdk.yaml
+++ b/overrides/openjdk.yaml
@@ -18,5 +18,5 @@ osbs:
                   - x86_64
       repository:
             name: containers/redhat-sso-7
-            branch: jb-sso-7.5-openshift-rhel8
-      koji_target: jb-sso-7.5-openshift-rhel8-containers-candidate
+            branch: rh-sso-7.5-rhel-8
+      koji_target: rh-sso-7.5-rhel-8-containers-candidate
