--- a/overrides/openj9.yaml
+++ b/overrides/openj9.yaml
@@ -27,5 +27,5 @@ osbs:
 
       repository:
             name: containers/redhat-sso-7
-            branch: jb-sso-7.5-openj9-openshift-rhel8
-      koji_target: jb-sso-7.5-openj9-openshift-rhel8-containers-candidate
+            branch: rh-sso-7.5-openj9-rhel-8
+      koji_target: rh-sso-7.5-openj9-rhel-8-containers-candidate
