--- a/modules/sso/sso/module.yaml
+++ b/modules/sso/sso/module.yaml
@@ -24,3 +24,7 @@ artifacts:
       path: /tmp/artifacts
     - name: keycloak-saml-eap6-adapter.zip
       path: /tmp/artifacts
+
+packages:
+    install:
+    - tree
