--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -6,6 +6,8 @@ version: '1.0'
 modules:
       install:
           ### Image :: Standalone ####
+          - name: eap-740-beta
+            version: "7.4.0.Beta"
           - name: eap-74-beta-galleon-latest
           - name: jboss.container.eap.setup
           - name: eap-install-cleanup
