--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -6,14 +6,9 @@ version: '1.0'
 modules:
       install:
           ### Image :: Standalone ####
-          - name: eap-74-beta-galleon-latest
-          # eap-740-beta needs to be called after eap-74-beta-galleon-latest,
-          # in order the JBOSS_HOME envvar to be set
-          - name: eap-740-beta
-            version: "7.4.0.Beta"
+          - name: eap-74-galleon-latest
           - name: jboss.container.eap.setup
           - name: eap-install-cleanup
-
 
           ### Image :: OpenShift ####
           # Order of the modules installation below matters!!! DO NOT CHANGE it unless
@@ -21,7 +16,6 @@ modules:
           # Common modules from the main CE cct_module repository
           - name: jboss.container.maven.default
           - name: dynamic-resources
-            version: '1.0'
           - name: jboss.container.eap.s2i.galleon
           - name: jboss.container.eap.galleon
           - name: jboss.container.eap.galleon.config.ee
@@ -42,7 +36,6 @@ modules:
           - name: jboss.container.wildfly.launch.logger-category
           - name: jboss.container.wildfly.launch.os.node-name
           - name: jboss.container.wildfly.launch.deployment-scanner
-          - name: jboss.container.wildfly.launch.keycloak
           - name: jboss.container.wildfly.launch.https
           - name: jboss.container.wildfly.launch.security-domains
           - name: jboss.container.wildfly.launch.elytron
@@ -59,6 +52,14 @@ modules:
             version: "3.0"
           # We keep this one to only advertise that hawkular is no more supported.
           - name: jboss.container.eap.hawkular
+          - name: jboss.container.util.logging.bash
+          - name: jboss.container.eap.prometheus.config
+          - name: os-eap-txnrecovery.run
+            version: 'python3'
+          # At this point, all scripts must have been added to JBOSS_HOME and to custom galleon packages location
+          - name: jboss.container.wildfly.galleon.build-feature-pack
+          - name: jboss.container.wildfly.galleon.provision-server
+          - name: jboss.container.eap.final-setup
 
 #          - name: jboss.container.eap.s2i.bash
 #          - name: jboss.container.java.jvm.bash
