--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -6,6 +6,9 @@ version: '1.0'
 modules:
       install:
           ### Image :: Standalone ####
+          # Call 'jboss.container.wildfly.s2i.bash' before 'eap-74-galleon-latest' module
+          # to ensure required GALLEON_MAVEN_BUILD_IMG_SETTINGS_XML envvar is defined
+          - name: jboss.container.wildfly.s2i.bash
           - name: eap-74-galleon-latest
           - name: jboss.container.eap.setup
           - name: eap-install-cleanup
