--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -32,7 +32,7 @@ modules:
             version: "osbs"
           - name: jboss.container.eap.openshift.modules
           - name: jboss.container.java.jvm.bash
-          - name: jboss.container.eap.launch
+          # - name: jboss.container.eap.launch
           - name: jboss.container.wildfly.launch.admin
           - name: jboss.container.wildfly.launch.access-log-valve
           - name: jboss.container.wildfly.launch-config.config
