--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -16,14 +16,15 @@ modules:
           # Common modules from the main CE cct_module repository
           - name: jboss.container.maven
             version: "8.2.3.6"
-          - name: jboss.container.maven.module
-            version: "3.6"
+            # Remove to reduce count of layers
+            #- name: jboss.container.maven.module
+            #version: "3.6"
           - name: os-eap-python
             version: '3.6'
           - name: jboss.container.jolokia
-            version: '7'
+            version: '8.2'
           - name: jboss.container.prometheus
-            version: '7'
+            version: '8.2'
           - name: dynamic-resources
           - name: jboss.container.eap.s2i.galleon
           - name: jboss.container.eap.galleon
@@ -31,7 +32,9 @@ modules:
           - name: jboss.container.eap.galleon.build-settings
             version: "osbs"
           - name: jboss.container.eap.openshift.modules
-          - name: jboss.container.java.jvm.bash
+          # Remove to reduce count of layers
+          # - name: jboss.container.java.jvm.bash
+          # Actions performed by RH-SSO nss_wrapper module
           # - name: jboss.container.eap.launch
           - name: jboss.container.wildfly.launch.admin
           - name: jboss.container.wildfly.launch.access-log-valve
@@ -62,9 +65,10 @@ modules:
           # We keep this one to only advertise that hawkular is no more supported.
           - name: jboss.container.eap.hawkular
           - name: jboss.container.util.logging.bash
-          - name: jboss.container.eap.prometheus.config
-          - name: os-eap-txnrecovery.run
-            version: 'python3'
+          # Remove following two to reduce count of layers
+          # - name: jboss.container.eap.prometheus.config
+          # - name: os-eap-txnrecovery.run
+          #  version: 'python3'
           # At this point, all scripts must have been added to JBOSS_HOME and to custom galleon packages location
           - name: jboss.container.wildfly.galleon.build-feature-pack
           - name: jboss.container.wildfly.galleon.provision-server
