Open https:// (443) port so 'jboss.container.wildfly.galleon.build-feature-pack' can download 'offliner-1.6.jar' artifact
Signed-off-by: Jan Lieskovsky <jlieskov@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -69,6 +69,8 @@ envs:
       example: "true"
 
 ports:
+    # https (443) is required for 'jboss.container.wildfly.galleon.build-feature-pack' module
+    - value: 443
     - value: 8443
 
 modules:
