--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -69,8 +69,14 @@ modules:
           # - name: jboss.container.eap.prometheus.config
           # - name: os-eap-txnrecovery.run
           #  version: 'python3'
+
           # At this point, all scripts must have been added to JBOSS_HOME and to custom galleon packages location
-          - name: jboss.container.wildfly.galleon.build-feature-pack
+          #- name: jboss.container.wildfly.galleon.build-feature-pack
+
+          # Use RH-SSO copy rather than the 'jboss.container.wildfly.galleon.build-feature-pack'
+          # to avoid downloading 'offliner.jar' and 'offliner.txt' artifact every time
+          - name: sso.copy.jboss.container.wildfly.galleon.build-feature-pack
+            version: '0.24.0'
           - name: jboss.container.wildfly.galleon.provision-server
           - name: jboss.container.eap.final-setup
 
