--- a/overrides/openj9.yaml
+++ b/overrides/openj9.yaml
@@ -14,10 +14,10 @@ osbs:
                 compose:
                   pulp_repos: true
                   # include_unpublished_pulp_repos: true
-                  packages:
-                  - java-11-openj9
-                  - java-11-openj9-headless
-                  - java-11-openj9-devel
+                  # packages:
+                  # - java-11-openj9
+                  # - java-11-openj9-headless
+                  # - java-11-openj9-devel
                   signing_intent: release
                   inherit: true
                 platforms:
