--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -50,6 +50,7 @@ modules:
             # - name: jboss.container.wildfly.launch.logger-category
           - name: jboss.container.wildfly.launch.os.node-name
           - name: jboss.container.wildfly.launch.deployment-scanner
+          - name: jboss.container.wildfly.launch.keycloak
           - name: jboss.container.wildfly.launch.https
           - name: jboss.container.wildfly.launch.security-domains
           - name: jboss.container.wildfly.launch.elytron
@@ -60,6 +61,7 @@ modules:
             # - name: jboss.container.wildfly.launch.messaging
             # - name: jboss.container.wildfly.launch.statefulset
             # - name: jboss.container.wildfly.galleon.fp-content.jolokia
+          - name: jboss.container.wildfly.galleon.fp-content.keycloak
           - name: jboss.container.wildfly.galleon.fp-content.java
           - name: jboss.container.wildfly.galleon.fp-content.config
           - name: jboss.container.wildfly.galleon.fp-content.mvn
