--- a/modules/eap/module.yaml
+++ b/modules/eap/module.yaml
@@ -55,12 +55,12 @@ modules:
           - name: jboss.container.wildfly.launch.security-domains
           - name: jboss.container.wildfly.launch.elytron
           - name: jboss.container.wildfly.launch.port-offset
-            # The following four were commented out to reduce count of layers
+            # The following three were commented out to reduce count of layers
             # (IOW to prevent docker: 'max depth exceeded' error)
             # - name: jboss.container.wildfly.launch.resource-adapters
             # - name: jboss.container.wildfly.launch.messaging
             # - name: jboss.container.wildfly.launch.statefulset
-            # - name: jboss.container.wildfly.galleon.fp-content.jolokia
+          - name: jboss.container.wildfly.galleon.fp-content.jolokia
           # needs to be before fp-content.keycloak to copy modules used to generate galleon packages
           - name: os-eap70-sso
           - name: jboss.container.wildfly.galleon.fp-content.keycloak
